# a3py

./: HISTORY.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
a3py/improved/: json.py  readable.py
a3py/simplified/: case.py  concurrence.py  datetime.py  dynamic.py  env.py  hashlib.py
scripts/: coverage.sh
tests/test_improved/: test_json.py  test_readable.py
tests/test_simplified/: dynamic.py  test_case.py  test_concurrence.py  test_datetime.py  test_dynamic.py  test_env.py  test_hashlib.py
