[build-system]
requires = ["setuptools>=61.0.0,<69.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a3py"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "ujson >= 5.2.0",
]
authors = [
  {name = "three-kinds", email = "3179158552@qq.com"},
]
description = "Python utils."
readme = "README.md"
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/three-kinds/a3py"
Source = "https://github.com/three-kinds/a3py"

[tool.setuptools.dynamic]
version = {attr = "a3py.__version__"}

[tool.setuptools.packages.find]
include = ["a3py*"]

[tool.mypy]
packages = [
    "a3py",
    "tests"
]
disable_error_code = [
    "import-untyped",
    "method-assign"
]

[tool.ruff]
src = [
    "a3py",
    "tests"
]
