[metadata]
name = a3py
version = attr: a3py.__version__
url = https://gitee.com/three-kinds/a3py
author = three-kinds
author_email = 3179158552@qq.com
description = python utils
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://gitee.com/three-kinds/a3py
    Source = https://gitee.com/three-kinds/a3py

[options]
python_requires = >=3.8
packages = a3py
include_package_data = true
zip_safe = false
install_requires =
    ujson >= 5.2.0
